--- a/style.css
+++ b/style.css
@@ -3,6 +3,30 @@
     padding: 0;
 }
 
+/* Responsive */
+
+/* Telefono */
+@media only screen and (max-width: 500px) {
+    body {
+        background-color: lightcoral;
+    }
+    .animation:hover {
+        transform: none;
+        transition: none;
+    }
+    body {
+        font-size: 14px;
+    }
+}
+
+/* Tableta */
+@media only screen and (min-width: 501px) and (max-width: 985px) {
+    body {
+        background-color: red;
+    }
+
+}
+
 /*Header*/
 
 .position {
