--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@
 @media only screen and (max-width: 500px) {
     body {
         background-color: lightcoral;
+        font-size: 14px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
     }
     .animation:hover {
         transform: none;
         transition: none;
     }
-    body {
-        font-size: 14px;
+
+    .imagen-principal {
+        display: flex;
+        justify-content: center;
+        
     }
 }
 
@@ -23,6 +29,17 @@
 @media only screen and (min-width: 501px) and (max-width: 985px) {
     body {
         background-color: red;
+        font-size: 17px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    .animation:hover {
+        transform: none;
+        transition: none;
+    }
+    .imagen-principal {
+        display: flex;
+        justify-content: center;
+
     }
 
 }
