--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,34 @@
   transition: all 1.4s;
 }
 
+.somos {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  background-color: lightgreen;
+}
+
+.fundadoras {
+  padding-top: 30px;
+  padding-left: 1000px;
+  padding-bottom: 20px;
+  background-color: aqua;
+}
+
+.fundadoras1 {
+  padding-bottom: 50px;
+  background-color: aqua;
+}
+
+.redes {
+  padding-top: 20px;
+  padding-left: 30px;
+}
+
+.sociales {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 * {
   margin: 0;
   padding: 0;
